<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Let\'s Go</string>
<<<<<<< HEAD
    <string name="action_settings">Settings</string>

=======
    
>>>>>>> origin/master
    <!-- User Info -->
    <string name="userEmail"></string>
    <string name="userPassword"></string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signUpName"></string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="signUpEmail"></string>
    <string name="signUpEmail2"></string>
    <string name="signUpPassword1"></string>
    <string name="signUpPassword2"></string>

    <!-- END -->


    <!-- Hints -->
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="emailHint1">E-mail</string>
    <string name="emailHint2">Re-enter E-mail</string>
    <string name="passwordHint1">Password</string>
    <string name="passwordHint2">Re-enter Password</string>

    <!-- END -->


    <!-- Buttons -->
    <string name="signUpBut">Sign up</string>
    <string name="logInBut">Log in</string>
    <string name="cancelBut">Cancel</string>
    <string name="submitBut">Submit</string>
    <string name="letsGoPlayBut">Let\'s Go Play!</string>
    <string name="myActivitiesBut">My Activities</string>
    <string name="createBut">Create!</string>
    <string name="cancelCreateBut">Cancel</string>
    <string name="logOutBut">Log out</string>
<<<<<<< HEAD
    <string name="DeleteActivityBut">Delete</string>
    <string name="EditActivityBut">Edit</string>
    <string name="MoreActivityInfoBut">More Info</string>
    <string name="LeaveActivityBut">Leave</string>

=======
    <string name="deleteActivityBut">Delete</string>
    <string name="editActivityBut">Edit</string>
    <string name="moreActivityInfoBut">More Info</string>
    <string name="leaveActivityBut">Leave</string>
>>>>>>> origin/master
    <!-- END -->


    <!-- Page Titles -->
    <string name="title_activity_log_in_page">Log In</string>
    <string name="title_activity_sign_up_page">Sign Up</string>
    <string name="title_activity_home_page">Home</string>
    <string name="title_activity_create_join_page">Create or Join</string>
    <string name="title_activity_create_category_page">Create - Catergories</string>
    <string name="title_activity_join_category_page">Join - Categories</string>
    <string name="title_activity_create_actvity_page">Create an Actvity</string>
    <string name="title_activity_join_available_game_page">Join Available Games</string>
    <string name="title_activity_my_activities_page">My Activities</string>
<<<<<<< HEAD
    <string name="title_activity_test">Test Activity</string>

    <!-- END -->


    <!-- Set TEXT VIEWs -->
    <string name="viewDate">Stat Date: </string>
    <string name="viewRepeatDates">Repeats: </string>
    <string name="viewStartTime">Start Time: </string>
    <string name="viewEndTime">End Time: </string>
    <string name="viewLocation">Location: </string>
    <string name="viewNumPeople">Number of People: </string>
    <string name="viewOtherInfo">Other Information: </string>
    <!-- END -->

    <string name="categoryName">Test Category Name</string>
    <string name="title_activity_my_profile_page">MyProfilePage</string>
    <string name="hello_world">Hello world!</string>
=======
    <string name="title_activity_test">Test Activity</string>
    <!-- END -->
    
    <!-- Settings options -->
    <string name="action_home">Home</string>
    <string name="action_my_profile">My Profile</string>
    <string name="action_my_activities">My Activities</string>
	<string name="action_settings">Settings</string>  
	<string name="action_log_out">Log Out</string>  
	<!-- END -->
	
	<!-- Set TEXT VIEWs -->
	<string name="viewDate">Stat Date: </string>
	<string name="viewRepeatDates">Repeats: </string>
	<string name="viewStartTime">Start Time: </string>
	<string name="viewEndTime">End Time: </string>
	<string name="viewLocation">Location: </string>
	<string name="viewNumPeople">Number of People: </string>
	<string name="viewOtherInfo">Other Information: </string>
    <!-- END -->
    
>>>>>>> origin/master

</resources>
