<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsd.teamswift.letsgo.MainActivity" >
    
    <EditText
        style="@style/inputUserEmail1"
        android:id="@+id/userEmail"
        android:layout_marginTop="200dp"/>

	<EditText
	    style="@style/inputUserPassword"
        android:id="@+id/userPassword"
        android:layout_alignLeft="@+id/userEmail"
        android:layout_below="@+id/userEmail"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/passwordHint1"/>

	<Button
	    android:id="@+id/forgotPasswordBut"
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:layout_alignRight="@+id/userPassword"
	    android:layout_below="@+id/userPassword"
	    android:gravity="center"
	    android:text="@string/forgotPassword"
	    android:textSize="12sp"
	    style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/logInBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpBut"
        android:layout_below="@+id/forgotPasswordBut"
        android:layout_marginTop="15dp"
        android:text="@string/logInBut"
        android:textSize="20sp"
        android:gravity="center"/>
    
	<Button
        android:id="@+id/signUpBut"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userPassword"
        android:layout_below="@+id/logInBut"
        android:layout_marginTop="5dp"
        android:text="@string/signUpBut"
        android:textSize="20sp"
        android:gravity="center"/>

</RelativeLayout>
