<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsd.teamswift.letsgo.CreateActivityPage" >

    <TextView
        android:id="@+id/viewUserName"
        style="@style/createViewBasic"
        android:text="@string/viewUserName" />
    
    <TextView
        android:id="@+id/viewActivityName"
        style="@style/createViewBasic"
        android:layout_below="@+id/viewUserName"
        android:text="@string/viewActivityName" />

    <TextView
        android:id="@+id/viewDate"
        style="@style/createViewBasic"
        android:layout_below="@+id/viewActivityName"
        android:text="@string/viewDate" />

    <TextView
        android:id="@+id/viewStartTime"
        style="@style/createViewBasic"
        android:layout_below="@+id/viewDate"
        android:text="@string/viewStartTime" />

    <TextView
        android:id="@+id/viewLocation"
        style="@style/createViewBasic"
        android:layout_below="@+id/viewStartTime"
        android:text="@string/viewLocation" />

    <TextView
        android:id="@+id/viewNumPeople"
        style="@style/createViewBasic"
        android:layout_below="@+id/viewLocation"
        android:text="@string/viewNumPeople" />

    <TextView
        android:id="@+id/viewOtherInfo"
        style="@style/createViewBasic"
        android:layout_below="@+id/viewNumPeople"
        android:text="@string/viewOtherInfo" />
    
    <TextView
        android:id="@+id/textViewUserName"
        style="@style/createViewBasic"
        android:layout_alignBaseline="@+id/viewUserName"
        android:layout_toRightOf="@+id/viewUserName" />
    
    <TextView
        android:id="@+id/textViewActivityName"
        style="@style/createViewBasic"
        android:layout_alignBaseline="@+id/viewActivityName"
        android:layout_toRightOf="@+id/viewActivityName" />

    <EditText
        android:id="@+id/inputStartDate"
        style="@style/inputCreateViewBasic"
        android:layout_alignBaseline="@+id/viewDate"
        android:layout_toRightOf="@+id/viewDate"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/inputStartTime"
        style="@style/inputCreateViewBasic"
        android:layout_alignBaseline="@+id/viewStartTime"
        android:layout_toRightOf="@+id/viewStartTime"
        android:inputType="time" />

    <EditText
        android:id="@+id/inputLocation"
        style="@style/inputCreateViewBasic"
        android:layout_alignBaseline="@+id/viewLocation"
        android:layout_toRightOf="@+id/viewLocation"
        android:inputType="time" />

    <EditText
        android:id="@+id/inputNumPeople"
        style="@style/inputCreateViewBasic"
        android:layout_alignBaseline="@+id/viewNumPeople"
        android:layout_toRightOf="@+id/viewNumPeople"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/inputOtherInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/twoButtonLL"
        android:layout_alignLeft="@+id/viewOtherInfo"
        android:layout_alignRight="@+id/twoButtonLL"
        android:layout_below="@+id/viewOtherInfo"
        android:ems="10"
        android:inputType="textMultiLine" />

    <!-- To put multiple buttons on one line unit -->

    <LinearLayout
        android:id="@+id/twoButtonLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewOtherInfo"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="109dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" >

        <Button
            android:id="@+id/cancelCreateBut"
            style="@style/buttonCancel" />

        <Button
            android:id="@+id/createBut"
            style="@style/buttonCreate" />
    </LinearLayout>

</RelativeLayout>